--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT=7000
 DB_URL=mongodb+srv://skranee:skranee999pasha@mm2db.oggwmgo.mongodb.net/?retryWrites=true&w=majority
 JWT_ACCESS_SECRET=mm2flip-dev-secret-key-access
 JWT_REFRESH_SECRET=mm2flip-dev-secret-key-refresh
+
+CLIENT_URL=http://localhost:3000
