--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "mobx-react-lite": "^4.0.5",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "ws": "^8.15.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & nodemon server/server.js & nodemon server/websocket.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -47,6 +49,6 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "typescript": "^5.3.3"
+    "typescript": "^4.9.5"
   }
 }
