--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,7 @@ MAX_EXP=2000
 CLIENT_URL=http://localhost:3000
 CLIENT_ID_TWITCH=4hox5eobr755zvj16dihkf7ujvaght
 CLIENT_SECRET_TWITCH=iv2smel6gl5iocj8c5lb4m4i6gyz42
+GENERATE_SOURCEMAP=false
+DEPOSIT_API_KEY=zjnaFtjp2zsWQVeH
+DEPOSIT_API_SECRET=Ssx6YYASpZ4zxTntUop3cREzpyLFCHRO
+ROBLOX_API_KEY=dBRB4C3/w0a8saVcIuaJF6UNi+DgMEYrZR4aowkEHiiQMPG+
