--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +11,13 @@
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "mobx-react-lite": "^4.0.5",
     "ngrok": "^5.0.0-beta.2",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -24,7 +27,7 @@
     "ws": "^8.15.0"
   },
   "scripts": {
-    "start": "react-scripts start & nodemon server/server.js & nodemon server/websocket.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,6 +52,8 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "concurrently": "^8.2.2",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.9.5"
   }
 }
