--- a/server/.env
+++ b/server/.env
@@ -10,3 +10,4 @@ GENERATE_SOURCEMAP=false
 DEPOSIT_API_KEY=zjnaFtjp2zsWQVeH
 DEPOSIT_API_SECRET=Ssx6YYASpZ4zxTntUop3cREzpyLFCHRO
 ROBLOX_API_KEY=dBRB4C3/w0a8saVcIuaJF6UNi+DgMEYrZR4aowkEHiiQMPG+
+RANDOM_ORG_API_KEY=bae6e395-eb4b-41f8-9532-976c343df3bb
