--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
+    "build": "npm run build",
     "start-ngrok": "ngrok http 7000",
     "websocket": "nodemon websocket.js"
   },
