--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "ws": "^8.15.0"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server.js",
-    "client": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -62,7 +60,6 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "concurrently": "^8.2.2",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.9.5"
   }
