--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.1",
     "web-vitals": "^2.1.4",
     "ws": "^8.15.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
