--- a/server/.env
+++ b/server/.env
@@ -12,3 +12,4 @@ DEPOSIT_API_SECRET=Ssx6YYASpZ4zxTntUop3cREzpyLFCHRO
 ROBLOX_API_KEY=dBRB4C3/w0a8saVcIuaJF6UNi+DgMEYrZR4aowkEHiiQMPG+
 RANDOM_ORG_API_KEY=bae6e395-eb4b-41f8-9532-976c343df3bb
 CURRENCY_CONVERTER=3
+DEFAULT_RECEIVER=65eb934f623b869cf8035057
