--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ws": "^8.15.0"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
