--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,8 +12,11 @@ RUN npm install -g serve
 
 RUN npm run build
 
+COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/.nginx/nginx.conf /etc/nginx/sites-enabled/default
+
 EXPOSE 80
 
 EXPOSE 443
 
-CMD ["serve", "-s", "build", "-l", "80"]
+CMD ["serve", "-s", "build", "-l", "443"]
