--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,7 +15,7 @@ RUN npm run build
 FROM nginx:latest
 
 COPY --from=build /app/build /usr/share/nginx/html
-COPY .nginx/nginx.conf /etc/nginx/sites-enabled/default
+COPY --from=build /app/.nginx/nginx.conf /etc/nginx/sites-enabled/default
 
 EXPOSE 80
 EXPOSE 443
