--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -17,6 +17,8 @@ FROM nginx:latest
 COPY --from=build /app/build /usr/share/nginx/html
 COPY --from=build /app/nginx/nginx.conf /etc/nginx/sites-enabled/default
 
+EXPOSE 80
+
 EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
