--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
 version: "3"
 services:
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "80:80"
+    depends_on:
+      - server
+
   client:
     build:
       context: ./client
       dockerfile: Dockerfile
     image: nginx:mainline-alpine
     ports:
-      - "80:80"
       - "443:443"
     restart: always
     depends_on:
