--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,33 +1,69 @@
 server {
-    listen 85;
-    server_name mm2-flip-test.ru www.mm2-flip-test.ru;
+        listen 80 default_server;
+        listen [::]:80 default_server;
 
-    location / {
-        root /var/www/build;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
+        root /var/www/html;
 
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 4;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        index index.html index.htm index.nginx-debian.html;
 
-    location /api {
-        proxy_pass http://mm2-flip-test.ru:7000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+        server_name mm2-flip-test.ru www.mm2-flip-test.ru;
 
-    location /ws {
-        proxy_pass http://mm2-flip-test.ru:4000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
+        location / {
+            root /var/www/build;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
+            proxy_pass http://mm2-flip-test.ru:3000;
+        }
+
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 4;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.1;
+        gzip_types text/plain text/css applicatison application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+        location /api {
+            proxy_pass http://mm2-flip-test.ru:7000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /ws {
+            proxy_pass http://mm2-flip-test.ru:4000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+}
+
+server {
+        root /var/www/html;
+
+        index index.html index.htm index.nginx-debian.html;
+        server_name mm2-flip-test.ru; # managed by Certbot
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
+
+        listen [::]:443 ssl ipv6only=on; # managed by Certbot
+        listen 443 ssl; # managed by Certbot
+        ssl_certificate /etc/letsencrypt/live/mm2-flip-test.ru/fullchain.pem; # managed by Certbot
+        ssl_certificate_key /etc/letsencrypt/live/mm2-flip-test.ru/privkey.pem; # managed by Certbot
+        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = mm2-flip-test.ru) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80 ;
+    listen [::]:80 ;
+    server_name mm2-flip-test.ru;
+    return 404; # managed by Certbot
 }
