--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
             root /var/www/build;
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
-            proxy_pass http://mm2-flip-test.ru:3000;
+            proxy_pass http://client:3000;
         }
 
         gzip_vary on;
@@ -23,7 +23,7 @@ server {
         gzip_types text/plain text/css applicatison application/javascript text/xml application/xml application/xml+rss text/javascript;
 
         location /api {
-            proxy_pass http://mm2-flip-test.ru:7000;
+            proxy_pass http://server:7000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -32,7 +32,7 @@ server {
         }
 
         location /ws {
-            proxy_pass http://mm2-flip-test.ru:4000;
+            proxy_pass http://server:4000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -56,6 +56,28 @@ server {
         include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
+        location / {
+           root /usr/share/nginx/html;
+           index index.html index.htm;
+           try_files $uri $uri/ /index.html;
+           proxy_pass http://client:3000;
+       }
+
+       location /api {
+           proxy_pass http://server:7000;
+           proxy_http_version 1.1;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection 'upgrade';
+           proxy_set_header Host $host;
+           proxy_cache_bypass $http_upgrade;
+       }
+
+       location /ws {
+           proxy_pass http://server:4000;
+           proxy_http_version 1.1;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection "upgrade";
+       }
 }
 server {
     if ($host = mm2-flip-test.ru) {
