--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -17,6 +17,6 @@ EXPOSE 3000
 FROM nginx:latest
 
 COPY --from=build /app/build /usr/share/nginx/html
-COPY --from=build /app/nginx/nginx.conf /etc/nginx/sites-enabled/default
+COPY /nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
