--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,8 +8,6 @@ RUN npm install
 
 COPY . .
 
-RUN npm install -g serve
-
 RUN npm run build
 
 EXPOSE 3000
@@ -17,6 +15,7 @@ EXPOSE 3000
 FROM nginx:latest
 
 COPY --from=build /app/build /usr/share/nginx/html
+COPY /etc/letsencrypt/options-ssl-nginx.conf /etc/letsencrypt/
 COPY /nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
