--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -40,7 +40,7 @@ server {
 }
 
 server {
-        root /var/www/html;
+        root /var/www/build;
 
         index index.html index.htm index.nginx-debian.html;
         server_name mm2-flip-test.ru; # managed by Certbot
