--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,8 @@ upstream server_upstream {
 server {
     listen 80 default_server;
 
+    root /var/www/build;
+
     server_name _;
 
     server_tokens off;
