--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
-upstream client_upstream {
-  server client:3000;
-}
-
-upstream server_upstream {
-  server server:7000;
-}
+# upstream client_upstream {
+#   server client:3000;
+# }
+#
+# upstream server_upstream {
+#   server server:7000;
+# }
 
 server {
 
@@ -22,7 +22,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
     location /api/ {
-        proxy_pass http://server:7000;
+        proxy_pass http://localhost:7000;
     }
 
     location ~* /ws {
@@ -77,7 +77,7 @@ server {
     server_tokens off;
 
     location /api/ {
-        proxy_pass http://server:7000;
+        proxy_pass http://localhost:7000;
     }
 
     location ~* /ws {
@@ -86,7 +86,7 @@ server {
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy false;
 
-      proxy_pass http://server:7000;
+      proxy_pass http://localhost:7000;
       proxy_redirect off;
 
       proxy_http_version 1.1;
@@ -106,6 +106,6 @@ server {
     proxy_cache_bypass $http_upgrade;
 
     location / {
-      proxy_pass http://client_upstream;
+      proxy_pass http://localhost;
     }
 }
