--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:latest
-
-ADD ./nginx.conf ./etc/nginx/conf.d/default.conf
-CMD ["nginx", "-g", "daemon off;"]
+#FROM nginx:latest
+#
+#ADD ./nginx.conf ./etc/nginx/conf.d/default.conf
+#CMD ["nginx", "-g", "daemon off;"]
