--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3"
 services:
-  nginx:
-    image: nginx:latest
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-      - ./public:/usr/share/nginx/html
+#  nginx:
+#    image: nginx:latest
+#    build:
+#      context: ./nginx
+#      dockerfile: Dockerfile
+#    volumes:
+#      - ./nginx:/etc/nginx/conf.d
+#      - ./data/certbot/conf:/etc/letsencrypt
+#      - ./data/certbot/www:/var/www/certbot
+#      - ./public:/usr/share/nginx/html
 #    ports:
 #      - "80:80"
 #      - "443:443"
-    depends_on:
-      - server
+#    depends_on:
+#      - server
 
   client:
     image: node
