--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ DB_URL=mongodb+srv://skranee:skranee999pasha@mm2db.oggwmgo.mongodb.net/?retryWri
 JWT_ACCESS_SECRET=mm2flip-dev-secret-key-access
 JWT_REFRESH_SECRET=mm2flip-dev-secret-key-refresh
 MAX_EXP=2000
-CLIENT_URL=http://188.166.104.236
+CLIENT_URL=https://188.166.104.236
 CLIENT_ID_TWITCH=4hox5eobr755zvj16dihkf7ujvaght
 CLIENT_SECRET_TWITCH=iv2smel6gl5iocj8c5lb4m4i6gyz42
 GENERATE_SOURCEMAP=false
