--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=7000
-DB_URL=mongodb+srv://skranee:skranee999pasha@mm2db.oggwmgo.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://MM2flip:hd4D0qhrHSqwK0Zu@cluster0.ciw83.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_ACCESS_SECRET=mm2flip-dev-secret-key-access
 JWT_REFRESH_SECRET=mm2flip-dev-secret-key-refresh
 MAX_EXP=2000
