--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ DB_URL=mongodb+srv://MM2flip:hd4D0qhrHSqwK0Zu@cluster0.ciw83.mongodb.net/?retryW
 JWT_ACCESS_SECRET=mm2flip-dev-secret-key-access
 JWT_REFRESH_SECRET=mm2flip-dev-secret-key-refresh
 MAX_EXP=2000
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://mm2fliptest.ru
 CLIENT_ID_TWITCH=4hox5eobr755zvj16dihkf7ujvaght
 CLIENT_SECRET_TWITCH=iv2smel6gl5iocj8c5lb4m4i6gyz42
 GENERATE_SOURCEMAP=false
