--- a/server/.env
+++ b/server/.env
@@ -13,3 +13,4 @@ ROBLOX_API_KEY=dBRB4C3/w0a8saVcIuaJF6UNi+DgMEYrZR4aowkEHiiQMPG+
 RANDOM_ORG_API_KEY=307f1fcd-d6c7-4f84-a055-4edc229e4652
 CURRENCY_CONVERTER=3
 DEFAULT_RECEIVER=65fe0da4bcf478f617682461
+API_KEY=018e6d4f-df28-70b7-8fca-cea7b5258b06
