--- a/server/.env
+++ b/server/.env
@@ -7,11 +7,11 @@ CLIENT_URL=https://mm2fliptest.ru
 CLIENT_ID_TWITCH=4hox5eobr755zvj16dihkf7ujvaght
 CLIENT_SECRET_TWITCH=iv2smel6gl5iocj8c5lb4m4i6gyz42
 GENERATE_SOURCEMAP=false
-DEPOSIT_API_KEY=1
-DEPOSIT_API_SECRET=2
+DEPOSIT_API_KEY=zjnaFtjp2zsWQVeH
+DEPOSIT_API_SECRET=Ssx6YYASpZ4zxTntUop3cREzpyLFCHRO
 ROBLOX_API_KEY=dBRB4C3/w0a8saVcIuaJF6UNi+DgMEYrZR4aowkEHiiQMPG+
 RANDOM_ORG_API_KEY=307f1fcd-d6c7-4f84-a055-4edc229e4652
 CURRENCY_CONVERTER=3
 DEFAULT_RECEIVER=65fe0da4bcf478f617682461
-API_KEY=4
-ADMIN_KEY=3
+API_KEY=018e6d4f-df28-70b7-8fca-cea7b5258b06
+ADMIN_KEY=7c6d451a-572b-4ece-833a-6d1f1ed100d3
