--- a/server/.env
+++ b/server/.env
@@ -1,16 +1,16 @@
 PORT=7000
-DB_URL=mongodb+srv://MM2flip:hd4D0qhrHSqwK0Zu@cluster0.ciw83.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://skranee:skranee999pasha@mm2db.oggwmgo.mongodb.net/?retryWrites=true&w=majority&appName=mm2db
 JWT_ACCESS_SECRET=mm2flip-dev-secret-key-access
 JWT_REFRESH_SECRET=mm2flip-dev-secret-key-refresh
 MAX_EXP=2000
-CLIENT_URL=https://mm2flip.com
+CLIENT_URL=http://localhost:3000
 CLIENT_ID_TWITCH=4hox5eobr755zvj16dihkf7ujvaght
 CLIENT_SECRET_TWITCH=iv2smel6gl5iocj8c5lb4m4i6gyz42
 GENERATE_SOURCEMAP=false
 DEPOSIT_API_KEY=zjnaFtjp2zsWQVeH
 DEPOSIT_API_SECRET=Ssx6YYASpZ4zxTntUop3cREzpyLFCHRO
 ROBLOX_API_KEY=dBRB4C3/w0a8saVcIuaJF6UNi+DgMEYrZR4aowkEHiiQMPG+
-RANDOM_ORG_API_KEY=307f1fcd-d6c7-4f84-a055-4edc229e4652
+RANDOM_ORG_API_KEY=bae6e395-eb4b-41f8-9532-976c343df3bb
 CURRENCY_CONVERTER=3
 DEFAULT_RECEIVER=65fe0da4bcf478f617682461
 API_KEY=018e6d4f-df28-70b7-8fca-cea7b5258b06
